--- a/app/src/main/res/layout/marks.xml
+++ b/app/src/main/res/layout/marks.xml
@@ -1,16 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mosabtoobasi.studentnotifications.Student$PlaceholderFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools= "http://schemas.android.com/tools"
+    android:id= "@+id/Tablelayout"
+    android:layout_width= "match_parent"
+    android:layout_height= "match_parent"
+    android:stretchColumns="*"
 
+    >
     <TextView
-        android:id="@+id/section_label"
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+        android:text="student mark"
+        android:textSize="25dp"
+        android:gravity="center"
+        android:paddingBottom="25dp"
+        android:paddingTop="25dp"/>
+</TableLayout>
