--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -63,17 +63,12 @@
         android:id="@+id/btn_signin"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="104dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:onClick="inputDat" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        app:layout_constraintTop_toTopOf="@+id/btn_signin"
-        android:layout_marginEnd="80dp"
+        android:onClick="inputDat"
+        android:layout_marginLeft="114dp"
+        android:layout_marginTop="164dp"
+        app:layout_constraintTop_toBottomOf="@+id/Password"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
 
