--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -55,24 +55,23 @@
         android:id="@+id/StudentSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_below="@+id/spinner2"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/Exam1" />
 
     <Spinner
         android:id="@+id/CSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toStartOf="@+id/Saveformmark" />
 
     <Button
         android:id="@+id/Saveformmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Save" />
+        android:text="Save"
+        android:layout_below="@+id/Quizes"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/Exam1"
