--- a/app/src/main/res/layout/mark4.xml
+++ b/app/src/main/res/layout/mark4.xml
@@ -57,7 +57,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/aaa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
