--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -69,9 +69,9 @@
         android:id="@+id/Saveformmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
         android:layout_below="@+id/Quizes"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Save" />
 
     <EditText
         android:id="@+id/Exam1"
