--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -9,14 +9,31 @@
     tools:context="com.example.mosabtoobasi.studentnotifications.Student$PlaceholderFragment">
 
     <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/section_label"
+        android:layout_marginTop="17dp"
+        android:text="Class Name" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignEnd="@+id/StudentSpiner"
+        android:text="Student Name" />
+
+    <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Exam2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/Exam1"
         android:text="إمتحان يومي "
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_alignBottom="@+id/Exam1"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -25,18 +42,7 @@
         android:text="إمتحان نهائي"
         android:textSize="24sp"
         android:layout_alignTop="@+id/Quizes"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/Quizes" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/Exam2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/Exam1"
-        android:text="إمتحان يومي "
-        android:textSize="24sp" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/section_label"
@@ -47,73 +53,81 @@
         android:id="@+id/spinner2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_alignTop="@+id/CSpiner"
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:id="@+id/StudentSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/Exam1" />
+        android:layout_marginEnd="13dp"
+        android:layout_marginTop="78dp"
+        android:layout_below="@+id/section_label"
+        android:layout_alignParentEnd="true" />
 
     <Spinner
         android:id="@+id/CSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/Saveformmark" />
+        android:layout_alignTop="@+id/StudentSpiner"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/Saveformmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Quizes"
-        android:layout_centerHorizontal="true"
-        android:text="Save" />
+        android:text="Save"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/Quizes"
+        android:layout_marginBottom="15dp" />
 
     <EditText
         android:id="@+id/Exam1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="54dp"
         android:ems="10"
         android:inputType="number"
-        android:text="0"
-        android:layout_below="@+id/StudentSpiner"
+        android:layout_below="@+id/spinner2"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/Exam2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/Exam1"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="44dp"
         android:ems="10"
         android:inputType="number"
-        android:text="0" />
+        android:layout_below="@+id/Exam1"
+        android:layout_toEndOf="@+id/section_label" />
 
     <EditText
         android:id="@+id/Quizes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/Exam2"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="42dp"
         android:ems="10"
         android:inputType="number"
-        android:text="0" />
+        android:layout_below="@+id/Exam2"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/Exam2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/Exam2"
         android:text="إمتحان شهرين"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_alignBottom="@+id/Exam2"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView10"
+        android:layout_alignBottom="@+id/textView10"
+        android:layout_centerHorizontal="true"
+        android:text="Corse Name " />
 
 </RelativeLayout>
