--- a/app/src/main/res/layout/mark4.xml
+++ b/app/src/main/res/layout/mark4.xml
@@ -8,13 +8,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mosabtoobasi.studentnotifications.Student$PlaceholderFragment">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/section_label"
+        android:layout_marginTop="13dp"
+        android:text="Class Name " />
+
     <Spinner
         android:id="@+id/spinner3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_toEndOf="@+id/section_label" />
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/spinner5"
+        android:layout_alignTop="@+id/spinner5" />
 
     <TextView
         android:id="@+id/section_label"
@@ -23,46 +32,40 @@
         android:layout_height="wrap_content" />
 
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/section_label"
-        android:layout_marginStart="12dp" />
-
-    <Spinner
-        android:id="@+id/spinner4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-
-    <Spinner
         android:id="@+id/spinner5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="163dp"
-        android:layout_below="@+id/spinner3"
-        android:layout_toStartOf="@+id/editText"
-        android:layout_marginEnd="15dp" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_alignTop="@+id/spinner5"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/textView8"
+        android:layout_alignEnd="@+id/textView4"
+        android:layout_marginTop="15dp" />
 
     <Button
         android:id="@+id/aaa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="179dp"
+        android:text="Save"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginBottom="74dp"
-        android:text="Save" />
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Student Name"
+        android:layout_marginStart="61dp"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignStart="@+id/aaa" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/aaa"
+        android:layout_marginBottom="58dp"
+        android:layout_toEndOf="@+id/spinner3"
+        android:ems="10"
+        android:inputType="number" />
 
 </RelativeLayout>
