--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -74,7 +74,7 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/Saveformmark"
+        android:id="@+id/saveformmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
