--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -8,6 +8,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mosabtoobasi.studentnotifications.Student$PlaceholderFragment">
 
+    <EditText
+        android:id="@+id/Seqzam"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_toEndOf="@+id/textView7" />
+
+    <EditText
+        android:id="@+id/Feqzam"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignStart="@+id/Seqzam" />
+
+    <EditText
+        android:id="@+id/Fneqzam"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:layout_below="@+id/Seqzam"
+        android:layout_alignStart="@+id/Seqzam" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -26,23 +54,14 @@
         android:text="Student Name" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="إمتحان يومي "
-        android:textSize="24sp"
-        android:layout_alignBottom="@+id/Exam1"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp" />
-
-    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="إمتحان نهائي"
+        android:text="Final Exam"
         android:textSize="24sp"
-        android:layout_alignTop="@+id/Quizes"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginTop="18dp"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/section_label"
@@ -78,48 +97,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/Quizes"
-        android:layout_marginBottom="15dp" />
-
-    <EditText
-        android:id="@+id/Exam1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_below="@+id/spinner2"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:id="@+id/Exam2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_below="@+id/Exam1"
+        android:layout_below="@+id/Fneqzam"
         android:layout_toEndOf="@+id/section_label" />
-
-    <EditText
-        android:id="@+id/Quizes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_below="@+id/Exam2"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="إمتحان شهرين"
+        android:text="First Exam"
         android:textSize="24sp"
-        android:layout_alignBottom="@+id/Exam2"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/spinner2"
+        android:layout_toEndOf="@+id/section_label"
+        android:layout_marginTop="58dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Second Exam"
+        android:textSize="24sp"
+        android:layout_below="@+id/Feqzam"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView7"
