--- a/app/src/main/res/layout/marks.xml
+++ b/app/src/main/res/layout/marks.xml
@@ -6,13 +6,4 @@
     android:layout_height= "match_parent"
     android:stretchColumns="*"
 
-    >
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="student mark"
-        android:textSize="25dp"
-        android:gravity="center"
-        android:paddingBottom="25dp"
-        android:paddingTop="25dp"/>
-</TableLayout>
+    ></TableLayout>
