--- a/app/src/main/res/layout/mark2.xml
+++ b/app/src/main/res/layout/mark2.xml
@@ -14,8 +14,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_toEndOf="@+id/textView7" />
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/Feqzam"
@@ -34,7 +35,7 @@
         android:ems="10"
         android:inputType="numberDecimal"
         android:layout_below="@+id/Seqzam"
-        android:layout_alignStart="@+id/Seqzam" />
+        android:layout_toEndOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView10"
@@ -48,10 +49,10 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Student ID"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_alignEnd="@+id/StudentSpiner"
-        android:text="Student Name" />
+        android:layout_toEndOf="@+id/Feqzam" />
 
     <TextView
         android:id="@+id/textView5"
@@ -74,23 +75,23 @@
         android:layout_height="wrap_content"
         android:visibility="visible"
         android:layout_alignTop="@+id/CSpiner"
-        android:layout_alignParentStart="true" />
+        android:layout_toEndOf="@+id/section_label" />
 
     <Spinner
         android:id="@+id/StudentSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:layout_marginTop="78dp"
-        android:layout_below="@+id/section_label"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignStart="@+id/textView9"
+        android:layout_below="@+id/textView9"
+        android:layout_marginTop="47dp"
+        android:visibility="invisible" />
 
     <Spinner
         android:id="@+id/CSpiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/StudentSpiner"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignStart="@+id/textView7" />
 
     <Button
         android:id="@+id/saveformmark"
@@ -98,7 +99,7 @@
         android:layout_height="wrap_content"
         android:text="Save"
         android:layout_below="@+id/Fneqzam"
-        android:layout_toEndOf="@+id/section_label" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/textView2"
@@ -123,9 +124,19 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Corse Name "
         android:layout_alignBaseline="@+id/textView10"
         android:layout_alignBottom="@+id/textView10"
-        android:layout_centerHorizontal="true"
-        android:text="Corse Name " />
+        android:layout_toEndOf="@+id/textView10"
+        android:layout_marginStart="24dp" />
+
+    <TextView
+        android:id="@+id/STUNAME"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner2"
+        android:layout_marginTop="14dp"
+        android:text="a" />
 
 </RelativeLayout>
