--- a/app/src/main/res/layout/marks.xml
+++ b/app/src/main/res/layout/marks.xml
@@ -12,5 +12,8 @@
     <ListView
         android:id="@+id/view_marks"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+</RelativeLayout>
